--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:               'Jane Doe / Today I Learned'
 tagline:             'Notes to self about software development'
 description:         ''
-url:                 'https://appdev-projects.github.io/'
-baseurl:             'til/'
+url:                 'https://appdev-projects.github.io'
+baseurl:             '/til'
 paginate:            5
 permalink:           pretty
 
