--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               'Jane Doe / Today I Learned'
+title:               'Jane Doe › Today I Learned'
 tagline:             'Notes to self about software development'
 description:         ''
 url:                 'https://appdev-projects.github.io'
